--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 week[[:space:]]6[[:space:]]Assessment filter=lfs diff=lfs merge=lfs -text
 *.png filter=lfs diff=lfs merge=lfs -text
+week[[:space:]]6[[:space:]]Assessment.pdf filter=lfs diff=lfs merge=lfs -text
